k8s/monitoring/44-grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: caddy
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
    - hosts:
        - grafana.seedfinderpro.de
      secretName: grafana-tls
  rules:
    - host: grafana.seedfinderpro.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 3000
