k8s/monitoring/53-alertmanager-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alertmanager
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: caddy
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
    - hosts:
        - alertmanager.seedfinderpro.de
      secretName: alertmanager-tls
  rules:
    - host: alertmanager.seedfinderpro.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: alertmanager
                port:
                  number: 9093
